Sound: take clips from the software mixer instead of one device line each
AudioSystem.getLine returns a DirectAudioDevice line per Clip, and SoundSystem.loadedClips caches
one AudioClip per SoundEffectType for the life of the process. A session therefore holds an open
device line for every distinct effect it has played, before any pooling. On PulseAudio/PipeWire
each is a separate application stream; once the device stops handing out lines, Clip.open() parks
in DirectAudioDevice.nOpen holding the mixer monitor and takes the game thread with it.

SoftMixingMixer mixes in Java and opens the device once. It is not a registered MixerProvider, so
it needs direct construction and --add-exports; null without it, and then nothing changes.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>